--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
+    "@hope-ui/solid": "^0.6.7",
     "@observablehq/plot": "^0.5.2",
     "@solid-primitives/graphql": "^1.1.2",
     "@solid-primitives/storage": "^1.3.1",
+    "@stitches/core": "^1.2.8",
     "arquero": "^5.0.0",
     "bootstrap": "^5.2.0",
     "dgraph-js-http": "^21.3.1",
@@ -24,6 +26,7 @@
     "ramda": "^0.28.0",
     "solid-bootstrap": "^1.0.8",
     "solid-js": "^1.4.7",
+    "solid-transition-group": "^0.0.10",
     "yaml": "^2.1.1"
   }
 }
