--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.2.0",
     "dgraph-js-http": "^21.3.1",
     "jsonata": "^1.8.6",
+    "jsonpath-plus": "^7.2.0",
     "ramda": "^0.28.0",
     "solid-bootstrap": "^1.0.8",
     "solid-js": "^1.4.7",
