--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
     "@solid-primitives/storage": "^1.3.1",
     "@stitches/core": "^1.2.8",
     "arquero": "^5.0.0",
-    "bootstrap": "^5.2.0",
     "dgraph-js-http": "^21.3.1",
+    "graphql-lodash": "^1.3.4",
     "jsonata": "^1.8.6",
     "jsonpath-plus": "^7.2.0",
     "ramda": "^0.28.0",
-    "solid-bootstrap": "^1.0.8",
     "solid-js": "^1.4.7",
     "solid-transition-group": "^0.0.10",
     "yaml": "^2.1.1"
