--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@hope-ui/solid": "^0.6.7",
     "@observablehq/plot": "^0.6.0",
+    "@solid-primitives/event-bus": "^0.1.2",
     "@solid-primitives/graphql": "^1.1.2",
     "@solid-primitives/storage": "^1.3.1",
     "@stitches/core": "^1.2.8",
