--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@observablehq/plot": "^0.6.0",
     "@solid-primitives/event-bus": "^0.1.2",
     "@solid-primitives/graphql": "^1.1.2",
+    "@solid-primitives/reducer": "^0.0.101",
     "@solid-primitives/storage": "^1.3.1",
     "@stitches/core": "^1.2.8",
     "arquero": "^5.0.0",
     "dgraph-js-http": "^21.3.1",
-    "graphql-lodash": "^1.3.4",
     "jsonata": "^1.8.6",
     "jsonpath-plus": "^7.2.0",
+    "lodash": "^4.17.21",
+    "node-json-transform": "^1.1.2",
     "ramda": "^0.28.0",
+    "selecttransform": "^1.6.1",
     "solid-js": "^1.4.7",
     "solid-transition-group": "^0.0.10",
     "yaml": "^2.1.1"
