refining and testing bus system

--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "jsonata": "^1.8.6",
     "jsonpath-plus": "^7.2.0",
     "lodash": "^4.17.21",
+    "monet": "^0.9.3",
     "node-json-transform": "^1.1.2",
     "ramda": "^0.28.0",
+    "ramda-adjunct": "^3.3.0",
     "selecttransform": "^1.6.1",
     "solid-js": "^1.4.7",
     "solid-transition-group": "^0.0.10",
