--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@observablehq/plot": "^0.6.0",
     "@solid-primitives/event-bus": "^0.1.2",
     "@solid-primitives/graphql": "^1.1.2",
+    "@solid-primitives/memo": "^1.1.0",
     "@solid-primitives/reducer": "^0.0.101",
     "@solid-primitives/storage": "^1.3.1",
     "@stitches/core": "^1.2.8",
@@ -30,6 +31,7 @@
     "node-json-transform": "^1.1.2",
     "ramda": "^0.28.0",
     "ramda-adjunct": "^3.3.0",
+    "rxjs": "^7.5.7",
     "selecttransform": "^1.6.1",
     "solid-js": "^1.4.7",
     "solid-transition-group": "^0.0.10",
